# cmake-nested-test

./: README.md
cmaketest/: CMakeLists.txt
cmaketest/app/: CMakeLists.txt  main.cpp
cmaketest/libs/: CMakeLists.txt  func1.h
cmaketest/libs/include/: func2.h
cmaketest/libs/src/: CMakeLists.txt  func1.cpp  func2.cpp
cmaketest/libs/src/subfunc/: CMakeLists.txt  subfunc.cpp
cmaketest/libs/src/subfunc/subsubfunc/: CMakeLists.txt  subsubfunc.cpp
cmaketest/src/: func1.cpp  func2.cpp
cmaketest/subfunc/: CMakeLists.txt  subfunc.cpp  subfunc.h
cmaketest/subfunc/subsubfunc/: CMakeLists.txt  subsubfunc.cpp  subsubfunc.h
cmaketest/unit-test/: unit-test.cpp
