INCLUDE_DIRECTORIES( ${LIBRARY_INCLUDE_PATH} )

# 1.将本目录下的所有.c 文件添加到SUB_DIR_LIB_SRCS变量
UNSET(SRC_ROOT_SOURCEFILE_LIST)
file (GLOB_RECURSE SRC_ROOT_SOURCEFILE_LIST "*.cpp")

MESSAGE("SRC_ROOT_SOURCEFILE_LIST in src ROOT :${SRC_ROOT_SOURCEFILE_LIST}")

# 3.生成静态库
add_library(myfuncs ${SRC_ROOT_SOURCEFILE_LIST})
